--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^2.7.14"
+    "vue": "^2.7.14",
+    "vue-resource": "^1.5.3"
   },
   "devDependencies": {
     "vite": "^3.2.3",
