--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^2.7.14",
-    "vue-resource": "^1.5.3"
+    "vue-resource": "^1.5.3",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "vite": "^3.2.3",
